--- a/UAI2023.bib
+++ b/UAI2023.bib
@@ -2,7 +2,7 @@
    booktitle = {Proceedings of the Thirty-Ninth Conference on Uncertainty in Artificial Intelligence},
    name = {Uncertainty in Artificial Intelligence},
    shortname = {UAI},
-   editor = {Evans, Robin and Shpitser, Ilya},
+   editor = {Evans, Robin J. and Shpitser, Ilya},
    volume = {216},
    year = {2023},
    start = {2023-07-31},
