Fix spelling of ninth

--- a/_posts/2023-07-02-sharma23c.md
+++ b/_posts/2023-07-02-sharma23c.md
@@ -41,12 +41,12 @@ author:
 - given: Daman
   family: Arora
 - given: 
-  family: Mausam 
+  family: Mausam
 - given: Parag
   family: Singla
 date: 2023-07-02
 address:
-container-title: Proceedings of the Thirty-Nineth Conference on Uncertainty in Artificial
+container-title: Proceedings of the Thirty-Ninth Conference on Uncertainty in Artificial
   Intelligence
 volume: '216'
 genre: inproceedings
