--- a/_posts/2023-07-02-zhang23c.md
+++ b/_posts/2023-07-02-zhang23c.md
@@ -43,7 +43,7 @@ author:
   family: Zhang
 date: 2023-07-02
 address:
-container-title: Proceedings of the Thirty-Nineth Conference on Uncertainty in Artificial
+container-title: Proceedings of the Thirty-Ninth Conference on Uncertainty in Artificial
   Intelligence
 volume: '216'
 genre: inproceedings
