--- a/_posts/2023-07-02-shekhar23a.md
+++ b/_posts/2023-07-02-shekhar23a.md
@@ -47,7 +47,7 @@ author:
   family: Ramdas
 date: 2023-07-02
 address:
-container-title: Proceedings of the Thirty-Nineth Conference on Uncertainty in Artificial
+container-title: Proceedings of the Thirty-Ninth Conference on Uncertainty in Artificial
   Intelligence
 volume: '216'
 genre: inproceedings
