--- a/UAI2023.bib
+++ b/UAI2023.bib
@@ -882,7 +882,7 @@
 	author = {Liu, Ao and Han, Qishen and Xia, Lirong and Yu, Nengkun},
 	openreview = {JAW9F2zzP7},
 	pages = {1274-1283},
-	title = {Accelerating Majority Voting by Quantum Computation}}
+	title = {Accelerating Voting by Quantum Computation}}
 
 @inproceedings{liu23b,
 	abstract = {Neural networks are universal approximators and are studied for their use in solving differential equations.  However, a major criticism is the lack of error bounds for obtained solutions.  This paper proposes a technique to rigorously evaluate the error bound of Physics-Informed Neural Networks (PINNs) on most linear ordinary differential equations (ODEs), certain nonlinear ODEs, and first-order linear partial differential equations (PDEs).  The error bound is based purely on equation structure and residual information and does not depend on assumptions of how well the networks are trained.  We propose algorithms that bound the error efficiently. Some proposed algorithms provide tighter bounds than others at the cost of longer run time.},
