--- a/_posts/2023-07-02-liu23a.md
+++ b/_posts/2023-07-02-liu23a.md
@@ -14,14 +14,14 @@ abstract: 'Studying the computational complexity and designing fast algorithms f
   time under a large class of voting rules. Our theoretical results are supported
   by experiments under plurality, Borda, Copeland, and STV.'
 openreview: JAW9F2zzP7
-title: Accelerating Majority Voting by Quantum Computation
+title: Accelerating Voting by Quantum Computation
 layout: inproceedings
 series: Proceedings of Machine Learning Research
 publisher: PMLR
 issn: 2640-3498
 id: liu23a
 month: 0
-tex_title: Accelerating Majority Voting by Quantum Computation
+tex_title: Accelerating Voting by Quantum Computation
 firstpage: 1274
 lastpage: 1283
 page: 1274-1283
