fix author's family name

--- a/_posts/2023-07-02-ma23a.md
+++ b/_posts/2023-07-02-ma23a.md
@@ -33,7 +33,7 @@ author:
 - given: Ching-Wen
   family: Ma
 - given: Yanwei
-  family: Lui
+  family: Liu
 date: 2023-07-02
 address:
 container-title: Proceedings of the Thirty-Ninth Conference on Uncertainty in Artificial
